# AI-Agents-HW5

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: CONCEPTS.md  MODEL_SELECTION.md  PLAN.md  PRD.md  PROMPTS.md  TODO.md
docs/prd/: airllm-runner.md  economics.md  measurement-harness.md  quantization.md
experiments/: capture_baseline_failure.py  generate_extension_figures.py  generate_figures.py  profile_machine.py  run_airllm.py  run_baseline.py  run_economics.py  run_paging_demo.py  run_quantization_sweep.py  run_size_comparison.py  smoke_test.py
reports/: concept_analysis.md  extension.md  technical_report.md
results/: airllm_fp16.json  airllm_q2.json  airllm_q4.json  airllm_q8.json  baseline_fp16.json  economics.json  extension_paging_trace.json  extension_size_qwen2.5-1.5b-instruct.json  extension_size_qwen2.5-14b-instruct.json  extension_size_qwen2.5-32b-instruct.json  extension_size_qwen2.5-3b-instruct.json  extension_size_qwen2.5-7b-instruct.json  hardware.json  smoke_test_fp16.json
results/baseline_failure/: diagnosis.md  error.txt
src/benchmark/: harness.py  persistence.py
src/config/: settings.py
src/economics/: costs.py
src/hardware/: profiler.py
src/paging/: __init__.py  instrument.py  layer_demo.py  paging_plot.py
src/quantization/: levels.py
src/runners/: airllm_compat.py  airllm_runner.py  baseline_runner.py
src/scaling/: __init__.py  size_plot.py  size_sweep.py
src/viz/: architecture.py  plots.py  roofline.py
tests/: test_airllm_compat.py  test_airllm_runner.py  test_baseline_runner.py  test_coverage_boost.py  test_economics.py  test_hardware.py  test_harness.py  test_levels.py  test_paging.py  test_persistence.py  test_plots.py  test_settings.py  test_size_sweep.py
