[project]
name = "ai-agents-hw5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=1.14.0",
    "airllm>=2.11.0",
    "bitsandbytes>=0.43.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
