[project]
name = "ai-agents-hw5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=1.14.0",
    "airllm>=2.11.0",
    "bitsandbytes>=0.43.0",
    "matplotlib>=3.11.0",
    "numpy>=1.26",
    "pandas>=3.0.3",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
    "sentencepiece>=0.2.0",
    "torch>=2.11.0",  # newest cu128 (CUDA) wheel; GPU build for the RTX 3090
    "transformers==4.44.2",  # airllm 2.11 needs this era (per-layer rotary, legacy cache)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]

# --- CUDA PyTorch for the RTX 3090 (CUDA 12.8 build) -------------------------
# Without this, PyPI serves the CPU-only torch wheel on Windows and the GPU is
# unused. Routing torch through the cu128 index makes `uv lock`/`uv sync`/`uv run`
# install the CUDA build. If cu128 fails to resolve for torch 2.12.1, change the
# URL below to .../whl/cu130.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
